--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Aragon Formula adalah usaha yang bergerak dalam pembuatan pakan dan segala kebutuhan hewan peliharaan.Produk-produk Aragon Formula dirancang dan dibuat oleh para ahli nutrisi hewan dengan pengawasan dokter hewan terbaik.
                                 Kami berkomitmen untuk menyediakan pakan berkualitas tinggi yang sehat dan aman bagi
                                 hewan kesayangan Anda.">
-    <meta name="keywords" content="Omah Jamur Banjardowo, Pupuk d'panen, d'panen">
+    <meta name="keywords" content="Aragon Formula, Pupuk d'panen, d'panen">
 
     <!-- FAVICON FILES -->
     <link href="assets/images/icons/apple-touch-icon-144-precomposed.png" rel="apple-touch-icon" sizes="144x144">
@@ -39,7 +39,7 @@
         <div class="container">
 
             <!-- small devices logo -->
-            <a href="index.html" style="color: black;"><b>Omah Jamur Banjardowo
+            <a href="index.html" style="color: black;"><b>Aragon Formula
 
                 </b>
             </a>
@@ -64,13 +64,12 @@
                 <div class="dtr-header-left">
 
                     <!-- logo -->
-                    <a class="logo-default dtr-scroll-link" href="#home" style="color: rgb(255, 255, 255);"><b>Omah
-                            Jamur Banjardowo
+                    <a class="logo-default dtr-scroll-link" href="#home" style="color: rgb(255, 255, 255);"><b>Aragon Formula
 
                         </b></a>
 
                     <!-- logo on scroll -->
-                    <a class="logo-alt dtr-scroll-link" href="#home" style="color: black;"><b>Omah Jamur Banjardowo
+                    <a class="logo-alt dtr-scroll-link" href="#home" style="color: black;"><b>Aragon Formula
 
                         </b></a>
                     <!-- logo on scroll ends -->
